--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "plugins": [
         "react-hot-loader/babel",
         "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-optional-chaining"
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-transform-runtime"
     ]
 }
