--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@babel/runtime": "^7.3.4",
     "react": "^16.8.4",
     "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.8.0"
+    "react-hot-loader": "^4.8.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
