--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "scripts": {
-    "start": "webpack-dev-server --mode development --hot --history-api-fallback",
-    "build": "webpack --mode production",
-    "test": "jest --env=jsdom",
-    "test-dev": "jest --env=jsdom --watch",
-    "lint-fix": "eslint --fix  --ext .js --ext .jsx src"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.15.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-jest": "^22.3.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-visualizer-plugin": "^0.1.11"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.3.4",
-    "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.8.0",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-  }
+    "scripts": {
+        "start": "webpack-dev-server --mode development --hot --history-api-fallback --inline",
+        "build": "webpack --mode production",
+        "test": "jest --env=jsdom",
+        "test-dev": "jest --env=jsdom --watch",
+        "lint-fix": "eslint --fix  --ext .js --ext .jsx src"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.3.4",
+        "@babel/plugin-proposal-class-properties": "^7.3.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+        "@babel/plugin-transform-runtime": "^7.3.4",
+        "@babel/preset-env": "^7.3.4",
+        "@babel/preset-react": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.5",
+        "css-loader": "^2.1.1",
+        "eslint": "^5.15.1",
+        "eslint-config-prettier": "^4.1.0",
+        "eslint-loader": "^2.1.2",
+        "eslint-plugin-jest": "^22.3.0",
+        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-plugin-react": "^7.12.4",
+        "file-loader": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.11.0",
+        "prettier": "^1.16.4",
+        "sass-loader": "^7.1.0",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.1",
+        "webpack-visualizer-plugin": "^0.1.11"
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.3.4",
+        "react": "^16.8.4",
+        "react-dom": "npm:@hot-loader/react-dom",
+        "react-hot-loader": "^4.8.0",
+        "react-redux": "^6.0.1",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0"
+    }
 }
