--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint-plugin-react": "^7.12.4",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
+        "jest": "^24.4.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "prettier": "^1.16.4",
