--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.3.4",
+        "axios": "^0.18.0",
+        "mocker-api": "^1.6.7",
+        "prop-types": "^15.7.2",
         "react": "^16.8.4",
         "react-dom": "npm:@hot-loader/react-dom",
         "react-hot-loader": "^4.8.0",
         "react-redux": "^6.0.1",
         "redux": "^4.0.1",
+        "redux-saga": "^1.0.2",
         "redux-thunk": "^2.3.0"
     }
 }
