--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: yarn build
 
 deploy:
     - provider: pages
-      repo: stanvishne/fms-wizard
+      repo: stanvishne/fms-demo
       skip_cleanup: true
       github_token: $GITHUB_TOKEN
       local_dir: build
